testing/tests/custom_ui/duplicated-block-call.stderr
error: ⚠️ Foo.txt:3:3: block `foo` was already called at `Foo.txt:2:3` so the previous one will be ignored
       You can repeat blocks by using the `template` proc-macro blocks: https://askama.rs/en/latest/creating_templates.html#blocks
         --> Foo.txt:3:3
       "block foo %}blob{% endblock %}\n"
  --> main.rs:9:21
   |
 9 |   #[template(source = r#"{% extends "extend-duplicated.html" %}
   |  _____________________^
10 | | {% block foo %}blob{% endblock %}
11 | | {% block foo %}blob{% endblock %}
12 | | "#, ext = "txt")]
   | |__^

error: could not compile `askama_test` (bin "main") due to 1 previous error
